# WeChat-Bridge

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  start.bat  start.sh
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
ag_monitor/: README.md  ag_monitor.py  probe_input.py
app/: ai_chat.py  bridge.py  commands.py  config.py  db.py  delivery.py  event_bus.py  fmt.py  ilink.py  keepalive.py  main.py  media.py  plugin_base.py  requirements.txt  version.py  web.py  webhook_manager.py
app/webapp/: __init__.py  api_handlers.py  auth.py  context.py  markdown_utils.py  pages.py  request_utils.py  server.py  webhook_parser.py
docs/: CHANGELOG.md  api-reference.md  architecture.md  bridge-code-agent.md  deployment.md  istoreos.md  webhook-async-reply.md  webhook-examples.md
docs/assets/: cf-worker-dl-proxy.js
examples/: bridge_cdp_agent.py  bridge_code_agent.py  bridge_qinglong.py  forwarder.py  project_map.json.example  webhook_journal.py  webhook_manager.py  webhook_okx.py  webhook_receiver.py
openwrt/: AUDIT.md  README.md  VERIFICATION.md  verify-istoreos-package.sh
openwrt/app-meta-wechat-bridge/: Makefile  config.sh
scripts/: bump_version.py  install.ps1  install.sh  start.bat  start.sh  stop.bat  stop.sh  uninstall.ps1  uninstall.sh
tests/: crypto_stub.py  test_ai_chat.py  test_bridge_delivery.py  test_config.py  test_db.py  test_ilink.py  test_media.py  test_webapp_server.py  test_webapp_utils.py
(+12 files in other folders)
